--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "flash": "^1.1.0",
     "http-errors": "^1.7.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1"
   }
